fix: fix prev/next button position and double scrollbar in datepicker

--- a/components/datepicker/src/styles/style-auro-calendar-month.scss
+++ b/components/datepicker/src/styles/style-auro-calendar-month.scss
@@ -48,13 +48,12 @@ $calendar-padding-desktop: var(--ds-size-200, $ds-size-200);
 }
 
 .header {
-  $header-padding: calc(var(--ds-size-100, $ds-size-100) + var(--ds-size-50, $ds-size-50) + var(--ds-size-25, $ds-size-25));
   display: flex;
+  height: var(--ds-size-500, $ds-size-500);
+  margin-bottom: var(--ds-size-150, $ds-size-150);
 
   align-items: center;
   flex-direction: row;
-
-  padding: $header-padding 0 $header-padding;
 
   text-align: center;
 }
